# flowpaths

./: .gitignore  404.html  CONTRIBUTING.md  README.md  abstract-path-model.html  abstract-walk-model.html  abstractsourcesinkgraph.html  additional-edges-penalty.html  additional-start-end-nodes.html  benchmarks.html  codecov.yml  contributing.html  faq.html  ignoring-edges.html  index.html  k-flow-decomposition-cycles.html  k-flow-decomposition.html  k-least-absolute-errors-cycles.html  k-least-absolute-errors.html  k-min-discordant-nodes-cycles.html  k-min-discordant-nodes.html  k-min-path-error-cycles.html  k-min-path-error.html  mfd-model-Graph 2.lp  mfd-model-gt15.kmer21.(418000.420000).V39.E61.acyc.graph.lp  mfd-model-gt15.kmer21.(834000.840000).V204.E283.acyc.graph.lp  mfd.lp  min-paths-min-discordant-nodes-cycles.html  min-paths-min-discordant-nodes.html  minimum-error-flow.html  minimum-flow-decomposition-cycles.html  minimum-flow-decomposition.html  minimum-generating-set.html  minimum-path-cover-cycles.html  minimum-path-cover.html  minimum-set-cover.html  mkdocs.yml  model-Graph 2.lp  model-Graph 2.sol  model-Graph 2.sol-3  (+22 more)
.github/: copilot-instructions.md
benchmarks/: aggregate_results.py  benchmark_minflowdecomp.py  benchmark_utils.py  correct_flow_dataset.py  create_small_dataset.py  run_Mouse.PacBio_1_perwidth.sh  run_Mouse.PacBio_5_perwidth.sh  run_SRR020730.sh  run_example_50.sh  run_example_500.sh
docs/: abstract-path-model.md  abstract-walk-model.md  abstractpathmodel.md  abstractsourcesinkgraph.md  additional-edges-penalty.md  benchmarks.md  faq.md  (+35 more)
(+208 files in other folders)
