[project]
name = "flowpaths"
version = "0.1.0"
description = "A Python package to quickly decompose weighted graphs into weights paths, under various models."
readme = "README.md"

requires-python = ">=3.8"

dependencies = [
    "networkx",
    "highspy"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"